--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prixy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://choton654.github.io/prixy_fe",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.13.2",
     "mui-datatables": "^4.3.0",
@@ -29,7 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "pm2 serve build 9000 --spa"
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
