--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.13.2",
     "mui-datatables": "^4.3.0",
@@ -31,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist",
+    "deploy": "pm2 serve build 9000 --spa",
     "predeploy": "npm run build"
   },
   "eslintConfig": {
@@ -51,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
