--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "pm2 serve build 9000 --spa",
-    "predeploy": "npm run build"
+    "deploy": "pm2 serve build 9000 --spa"
   },
   "eslintConfig": {
     "extends": [
